# truth

./: main.py  pyproject.toml  pyrightconfig.json
src/truth/: agent.py  cli.py  client.py  models.py  poller.py
