[project]
name = "truth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "httpx-retries>=0.4.5",
    "loguru>=0.7.3",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
]

[dependency-groups]
dev = [
    "ipython>=9.6.0",
    "pytest>=8.4.2",
    "ruff>=0.14.1",
]
