[project]
name = "truth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "httpx-retries>=0.4.5",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "pendulum>=3.1.0",
    "pydantic>=2.12.3",
    "pydantic-ai[bedrock]>=1.10.0",
    "pydantic-settings>=2.11.0",
    "typer>=0.20.0",
]

[dependency-groups]
dev = [
    "ipython>=9.6.0",
    "pytest>=8.4.2",
    "ruff>=0.14.1",
]

[project.scripts]
truth = "truth.cli:cli"

[[tool.uv.index]]
name = "adevinta"
url = "https://artifactory.mpi-internal.com/artifactory/api/pypi/pypi-virtual/simple"

[tool.uv]
package = true

[tool.uv.sources]
pendulum = { index = "adevinta" }
